# ot-harjoitustyo

./: .env  .env.test  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testausdokumentti.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: HSL-matkakortit_sekvenssikaavio.md  monopoli_luokkakaavio.md
src/: config.py  database_connection.py  index.py  initialize_database.py
src/entities/: category.py  task.py
src/repositories/: category_repository.py  task_repository.py
src/services/: task_service.py
src/tests/: category_repository_test.py  task_repository_test.py  task_service_test.py
src/ui/: start_view.py  task_view.py  ui.py
